<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.p007qs.QSFooterImpl xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/qs_footer" android:background="@android:color/transparent" android:paddingBottom="4dp" android:clickable="false" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="@dimen/qs_footer_height" android:baselineAligned="false" android:elevation="4dp">
    <View android:layout_gravity="top" android:id="@+id/qs_footer_divider" android:background="?android:attr/dividerHorizontal" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="1dp"/>
    <LinearLayout android:gravity="end" android:layout_gravity="center_vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/qs_footer_left_part" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="4" android:paddingStart="@dimen/qs_carrier_text_padding">
            <include android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="8dp" layout="@layout/mobile_signal_group"/>
            <include android:layout_gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/carrier_group" android:focusable="false" android:layout_width="wrap_content" android:layout_height="match_parent" layout="@layout/qs_carrier_group"/>
        </LinearLayout>
        <com.android.systemui.p007qs.PageIndicator android:layout_gravity="center_vertical" android:id="@+id/footer_page_indicator" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent"/>
        <com.android.keyguard.AlphaOptimizedLinearLayout android:gravity="right|center_vertical|center_horizontal|center|end" android:id="@+id/qs_footer_actions_container" android:layout_width="@integer/qs_footer_actions_width" android:layout_height="match_parent" android:layout_weight="@integer/qs_footer_actions_weight" android:paddingEnd="@dimen/qs_footer_settings_btn_padding_end">
            <com.android.systemui.statusbar.phone.MultiUserSwitch android:id="@+id/multi_user_switch" android:background="@drawable/ripple_drawable" android:focusable="true" android:layout_width="@dimen/qs_footer_impl2_icon_size" android:layout_height="@dimen/qs_footer_impl2_icon_size" android:layout_alignParentEnd="true">
                <ImageView android:layout_gravity="center" android:id="@+id/multi_user_avatar" android:layout_width="@dimen/multi_user_avatar_expanded_size" android:layout_height="@dimen/multi_user_avatar_expanded_size" android:scaleType="centerInside"/>
            </com.android.systemui.statusbar.phone.MultiUserSwitch>
            <com.android.systemui.statusbar.AlphaOptimizedImageView android:id="@android:id/edit" android:background="?android:attr/selectableItemBackgroundBorderless" android:padding="@dimen/qs_footer_impl2_icon_padding" android:focusable="true" android:clickable="true" android:clipToPadding="false" android:layout_width="@dimen/qs_footer_impl2_icon_size" android:layout_height="@dimen/qs_footer_impl2_icon_size" android:src="@drawable/ic_mode_edit" android:tint="?android:attr/colorForeground" android:contentDescription="@string/accessibility_quick_settings_edit"/>
            <com.android.systemui.statusbar.phone.WLBSwitch android:id="@+id/wlb_switch" android:background="@drawable/ripple_drawable" android:focusable="true" android:layout_width="@dimen/qs_footer_impl2_icon_size" android:layout_height="@dimen/qs_footer_impl2_icon_size" android:contentDescription="@string/accessibility_work_life_balance_mode" android:layout_alignParentEnd="true">
                <ImageView android:layout_gravity="center" android:id="@+id/wlb_avatar" android:layout_width="@dimen/multi_user_avatar_expanded_size" android:layout_height="@dimen/multi_user_avatar_expanded_size" android:src="@drawable/ic_qs_work_life_balance" android:scaleType="centerInside" android:tint="?android:attr/colorForeground"/>
            </com.android.systemui.statusbar.phone.WLBSwitch>
            <com.android.systemui.statusbar.AlphaOptimizedFrameLayout android:id="@+id/settings_button_container" android:clipChildren="false" android:clipToPadding="false" android:layout_width="@dimen/qs_footer_impl2_icon_size" android:layout_height="@dimen/qs_footer_impl2_icon_size">
                <com.android.systemui.statusbar.phone.SettingsButton android:id="@+id/settings_button" android:background="@drawable/ripple_drawable" android:padding="15dp" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/ic_settings_16dp" android:tint="?android:attr/colorForeground" android:contentDescription="@string/accessibility_quick_settings_settings" style="@style/Widget.Material.Button.Borderless"/>
                <com.android.systemui.statusbar.AlphaOptimizedImageView android:id="@+id/tuner_icon" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/tuner" android:tint="?android:attr/textColorTertiary" android:paddingStart="36dp" android:paddingEnd="4dp"/>
            </com.android.systemui.statusbar.AlphaOptimizedFrameLayout>
        </com.android.keyguard.AlphaOptimizedLinearLayout>
    </LinearLayout>
    <View android:layout_gravity="bottom|center_vertical|center_horizontal|center" android:id="@+id/qs_drag_handle_view" android:background="@drawable/qs_footer_drag_handle" android:layout_width="27dp" android:layout_height="4dp"/>
</com.android.systemui.p007qs.QSFooterImpl>
