<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/layout" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/background" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="center"/>
    <LinearLayout android:gravity="bottom" android:orientation="vertical" android:background="@color/biometric_dialog_dim_color" android:layout_width="match_parent" android:layout_height="match_parent">
        <View android:id="@+id/space" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:contentDescription="@string/biometric_dialog_empty_space_description"/>
        <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <View android:id="@+id/left_space" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
                <LinearLayout android:orientation="vertical" android:id="@+id/dialog" android:background="@drawable/biometric_dialog_bg" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textColor="?android:attr/textColorPrimary" android:id="@+id/title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/oneplus_contorl_margin_left2" android:layout_marginTop="@dimen/oneplus_contorl_margin_top4" android:layout_marginRight="@dimen/oneplus_contorl_margin_right2" android:textDirection="locale" android:textAlignment="viewStart" style="@style/oneplus_contorl_text_style_title"/>
                    <TextView android:textColor="?android:attr/textColorSecondary" android:id="@+id/subtitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/oneplus_contorl_margin_left2" android:layout_marginTop="@dimen/oneplus_contorl_margin_top1" android:layout_marginRight="@dimen/oneplus_contorl_margin_right2" android:textDirection="locale" android:textAlignment="viewStart" style="@style/oneplus_contorl_text_style_subheading"/>
                    <TextView android:textColor="?android:attr/textColorSecondary" android:id="@+id/description" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/oneplus_contorl_margin_left2" android:layout_marginTop="@dimen/oneplus_contorl_margin_top1" android:layout_marginRight="@dimen/oneplus_contorl_margin_right2" android:textDirection="locale" android:textAlignment="viewStart" style="@style/oneplus_contorl_text_style_body1"/>
                    <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="@dimen/oneplus_button_mini_height" android:layout_marginTop="@dimen/oneplus_contorl_margin_top1" android:layout_marginBottom="@dimen/oneplus_contorl_margin_top1" android:measureWithLargestChild="true" style="?android:attr/buttonBarStyle">
                        <Space android:id="@+id/leftSpacer" android:visibility="visible" android:layout_width="0dp" android:layout_height="match_parent"/>
                        <Button android:gravity="center" android:id="@+id/button2" android:layout_width="wrap_content" android:layout_height="match_parent" android:maxLines="2" style="@android:style/Animation.VoiceInteractionSession"/>
                        <Space android:id="@+id/middleSpacer" android:visibility="visible" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
                        <Button android:ellipsize="end" android:gravity="center" android:id="@+id/button1" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/biometric_dialog_confirm" android:maxLines="2" style="@android:style/Animation.VoiceInteractionSession"/>
                        <Button android:gravity="center" android:id="@+id/button_try_again" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/biometric_dialog_try_again" android:maxLines="2" style="@android:style/Animation.VoiceActivity"/>
                        <Space android:id="@+id/rightSpacer" android:visibility="visible" android:layout_width="0dp" android:layout_height="match_parent"/>
                    </LinearLayout>
                    <View android:background="?android:attr/listDivider" android:layout_width="match_parent" android:layout_height="@dimen/oneplus_contorl_divider_height_standard" android:layout_marginBottom="@dimen/oneplus_contorl_margin_top4"/>
                    <TextView android:textColor="?android:attr/textColorSecondary" android:gravity="center_horizontal" android:id="@+id/error1" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/oneplus_contorl_margin_left2" android:layout_marginRight="@dimen/oneplus_contorl_margin_right2" android:layout_marginBottom="@dimen/oneplus_contorl_margin_top2" android:accessibilityLiveRegion="polite" style="@style/oneplus_contorl_text_style_body1"/>
                    <ImageView android:layout_gravity="center_horizontal" android:id="@+id/biometric_icon" android:layout_width="0dp" android:layout_height="0dp" android:scaleType="fitXY"/>
                    <TextView android:textSize="12sp" android:textColor="@color/biometric_dialog_gray" android:gravity="center_horizontal" android:id="@+id/error2" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/oneplus_contorl_margin_left2" android:layout_marginTop="@dimen/oneplus_contorl_margin_top2" android:layout_marginRight="@dimen/oneplus_contorl_margin_right2" android:accessibilityLiveRegion="polite"/>
                    <View android:id="@+id/bottom_space" android:layout_width="1dp" android:layout_height="0dp"/>
                </LinearLayout>
                <View android:id="@+id/right_space" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>
