<?xml version="1.0" encoding="utf-8"?>
<com.android.keyguard.KeyguardSimPukView xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/keyguard_sim_puk_view" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_maxHeight="@dimen/keyguard_security_max_height" app:layout_maxWidth="@dimen/keyguard_security_width">
    <View android:layout_width="match_parent" android:layout_height="@dimen/keyguard_security_sim_pin_top_space"/>
    <ImageView android:id="@+id/keyguard_sim" android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/ic_lockscreen_sim" android:tint="@color/background_protected"/>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="16sp" android:textColor="?attr/wallpaperTextColor" android:ellipsize="marquee" android:layout_gravity="center_horizontal" android:id="@+id/slot_id_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:textDirection="locale"/>
    <include android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/keyguard_message_area"/>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:layoutDirection="ltr">
        <include android:id="@+id/keyguard_esim_area" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/eca_overlap" layout="@layout/keyguard_esim_area"/>
        <RelativeLayout android:id="@+id/row0" android:paddingBottom="42px" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
            <com.android.keyguard.PasswordTextView android:textColor="?attr/wallpaperTextColor" android:gravity="center" android:id="@+id/pukEntry" android:layout_width="@dimen/keyguard_security_width" android:layout_height="match_parent" android:layout_marginRight="189px" android:layout_centerHorizontal="true" android:contentDescription="@string/keyguard_accessibility_sim_puk_area" app:scaledTextSize="@integer/scaled_password_text_size"/>
            <ImageButton android:gravity="center_vertical" android:id="@+id/delete_button" android:background="@drawable/ripple_drawable" android:paddingLeft="0dp" android:paddingTop="8dp" android:paddingRight="0dp" android:paddingBottom="8dp" android:clickable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="@drawable/ic_backspace_black_24dp" android:tint="@color/pin_delete_color" android:layout_alignParentRight="true" android:contentDescription="@string/keyboardview_keycode_delete" android:layout_alignEnd="@+id/pinEntry" android:tintMode="src_in"/>
            <View android:id="@+id/divider" android:background="@drawable/pin_divider" android:layout_width="match_parent" android:layout_height="1dp" android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
            <com.android.keyguard.NumPadKey android:id="@+id/key1" android:layout_width="0px" android:layout_height="match_parent" android:layout_weight="1" app:digit="1" app:textView="@+id/pukEntry"/>
            <com.android.keyguard.NumPadKey android:id="@+id/key2" android:layout_width="0px" android:layout_height="match_parent" android:layout_weight="1" app:digit="2" app:textView="@+id/pukEntry"/>
            <com.android.keyguard.NumPadKey android:id="@+id/key3" android:layout_width="0px" android:layout_height="match_parent" android:layout_weight="1" app:digit="3" app:textView="@+id/pukEntry"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
            <com.android.keyguard.NumPadKey android:id="@+id/key4" android:layout_width="0px" android:layout_height="match_parent" android:layout_weight="1" app:digit="4" app:textView="@+id/pukEntry"/>
            <com.android.keyguard.NumPadKey android:id="@+id/key5" android:layout_width="0px" android:layout_height="match_parent" android:layout_weight="1" app:digit="5" app:textView="@+id/pukEntry"/>
            <com.android.keyguard.NumPadKey android:id="@+id/key6" android:layout_width="0px" android:layout_height="match_parent" android:layout_weight="1" app:digit="6" app:textView="@+id/pukEntry"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
            <com.android.keyguard.NumPadKey android:id="@+id/key7" android:layout_width="0px" android:layout_height="match_parent" android:layout_weight="1" app:digit="7" app:textView="@+id/pukEntry"/>
            <com.android.keyguard.NumPadKey android:id="@+id/key8" android:layout_width="0px" android:layout_height="match_parent" android:layout_weight="1" app:digit="8" app:textView="@+id/pukEntry"/>
            <com.android.keyguard.NumPadKey android:id="@+id/key9" android:layout_width="0px" android:layout_height="match_parent" android:layout_weight="1" app:digit="9" app:textView="@+id/pukEntry"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
            <Space android:layout_width="0px" android:layout_height="match_parent" android:layout_weight="1"/>
            <com.android.keyguard.NumPadKey android:id="@+id/key0" android:layout_width="0px" android:layout_height="match_parent" android:layout_weight="1" app:digit="0" app:textView="@+id/pukEntry"/>
            <ImageButton android:id="@+id/key_enter" android:background="@drawable/ripple_drawable" android:paddingBottom="11sp" android:layout_width="0px" android:layout_height="match_parent" android:src="@drawable/ic_done_black_24dp" android:layout_weight="1" android:contentDescription="@string/keyboardview_keycode_enter" style="@style/Keyguard.ImageButton.NumPadEnter"/>
        </LinearLayout>
    </LinearLayout>
    <include android:gravity="center_horizontal" android:layout_gravity="bottom|center_vertical|center_horizontal|center" android:orientation="vertical" android:id="@+id/keyguard_selector_fade_container" android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/keyguard_eca"/>
</com.android.keyguard.KeyguardSimPukView>
